<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="ravenlair_title">Pixel\'s Den</string>
    <string name="ravenlair_summary">Your Dessert Here</string>
    <string name="dialog_team_title">The team</string>
    <string name="leaddeveloper_title">Lead Developer</string>
    <string name="developer_title">Developer</string>
    <string name="maintainer_title">Maintainer</string>
    <string name="contributor_title">Contributor</string>
    <string name="graphicsdesigner_title">Graphics Designer</string>
    <string name="navigation_system_title">System</string>
    <string name="navigation_lockscreen_title">Lockscreen</string>
    <string name="navigation_statusbar_title">Statusbar</string>
    <string name="navigation_hardware_title">Hardware</string>
    <string name="navigation_multitasking_title">Multitasking</string>
    <string name="reset">Reset</string>
    <string name="gestures">Gestures</string>
    <string name="misc">Misc</string>
    <string name="clock">Lockscreen Clocks</string>
    <string name="lockscreen_security">Security</string>
    <string name="incall_vibration_category">In Call Vibrations</string>
    <string name="statusbar_clock">Clocks</string>
    <string name="statusbar_battery">Battery</string>
    <string name="gestures_title">Nav Bar Gesture Customisations</string>
    <string name="gestures_summary">Take Your Pill</string>
    <string name="button_pref_title">Buttons</string>
    <string name="hardware_keys_home_key_title">Home button</string>
    <string name="hardware_keys_back_key_title">Back button</string>
    <string name="hardware_keys_menu_key_title">Menu button</string>
    <string name="hardware_keys_assist_key_title">Search button</string>
    <string name="hardware_keys_appswitch_key_title">Recents button</string>
    <string name="hardware_keys_camera_key_title">Camera button</string>
    <string name="hardware_keys_short_press_title">Short press action</string>
    <string name="hardware_keys_long_press_title">Long press action</string>
    <string name="hardware_keys_double_tap_title">Double tap action</string>
    <string name="hardware_keys_action_nothing">No action</string>
    <string name="hardware_keys_action_menu">Open/close menu</string>
    <string name="hardware_keys_action_app_switch">Recent apps switcher</string>
    <string name="hardware_keys_action_search">Search assistant</string>
    <string name="hardware_keys_action_voice_search">Voice search</string>
    <string name="hardware_keys_action_in_app_search">In-app search</string>
    <string name="hardware_keys_action_launch_camera">Launch camera</string>
    <string name="hardware_keys_action_sleep">Turn screen off</string>
    <string name="hardware_keys_action_split_screen">Split screen</string>
    <string name="hardware_keys_swipe_right_key_title">Swipe right</string>
    <string name="hardware_keys_swipe_left_key_title">Swipe left</string>
    <string name="hardware_keys_long_tap_key_title">Long tap</string>
    <string name="hardware_keys_swipe_tap_title">Swipe action</string>
    <string name="hardware_keys_long_tap_title">Long tap action</string>
    <string name="button_wake_title">Wake device</string>
    <string name="camera_sleep_on_release_title">Screen peek</string>
    <string name="camera_sleep_on_release_summary">A half press will keep the screen on only while the button is held down</string>
    <string name="camera_launch_title">Launch camera</string>
    <string name="camera_launch_summary">A longpress and release will launch camera</string>
    <string name="button_backlight_title">Backlight</string>
    <string name="button_backlight_enabled">Illuminate buttons</string>
    <string name="button_backlight_only_when_pressed_title">Illuminate buttons only when pressed</string>
    <string name="keyboard_backlight_enabled">Illuminate keyboard</string>
    <string name="button_backlight_seekbar_title">Button brightness</string>
    <string name="keyboard_backlight_seekbar_title">Keyboard brightness</string>
    <string name="backlight_timeout_title">Illumination timeout</string>
    <string name="backlight_timeout_unlimited">Don\'t turn off</string>
    <string name="backlight_summary_disabled">Disabled</string>
    <string name="backlight_summary_enabled_with_timeout">Enabled for <xliff:g id="timeout">%s</xliff:g></string>
    <string name="backlight_summary_enabled">Enabled</string>
    <string name="disable_navkeys_title">Enable on-screen nav bar</string>
    <string name="disable_navkeys_summary">Enable on-screen navigation bar and disable hardware buttons</string>
    <string name="swap_capacitive_keys_title">Swap capacitive buttons</string>
    <string name="swap_capacitive_keys_summary">Swap the order of recents and back buttons</string>
    <string name="navigation_bar_title">Navigation bar</string>
    <string name="hardware_keys_power_key_title">Power button</string>
    <string name="hardware_keys_volume_keys_title">Volume buttons</string>
    <string name="navigation_bar_arrow_keys_title">Show arrow keys while typing</string>
    <string name="navigation_bar_arrow_keys_summary">Display left and right cursor buttons while typing. Overrides IME switcher.</string>
    <string name="nav_bar_layout_inverse_title">Invert layout</string>
    <string name="nav_bar_layout_inverse_summary">Invert layout of navigation bar buttons</string>
    <string name="navigation_bar_compact_layout_title">Compact layout</string>
    <string name="navigation_bar_compact_layout_summary">Use a compact layout in the navigation bar</string>
    <string name="volbtn_music_controls_title">Control playback</string>
    <string name="volbtn_music_controls_summary">Seek music tracks by long pressing the volume keys while the display is off</string>
    <string name="volume_answer_call_title">Answer call</string>
    <string name="volume_answer_call_summary">Answer incoming calls by pressing the volume buttons</string>
    <string name="volbtn_cursor_control_title">Keyboard cursor control</string>
    <string name="volbtn_cursor_control_off">Disabled</string>
    <string name="volbtn_cursor_control_on">Volume up/down moves cursor left/right</string>
    <string name="volbtn_cursor_control_on_reverse">Volume up/down moves cursor right/left</string>
    <string name="swap_volume_buttons_title">Reorient</string>
    <string name="swap_volume_buttons_summary">Swap volume buttons when the screen is rotated</string>
    <string name="home_answer_call_title">Answer call</string>
    <string name="home_answer_call_summary">Answer incoming calls by pressing the home button</string>
    <string name="power_end_call_title">End call</string>
    <string name="power_end_call_summary">End the current call by pressing the power button</string>
    <string name="torch_long_press_power_gesture_title">Long press for torch</string>
    <string name="torch_long_press_power_gesture_desc">Activate the torch by long pressing the power button while the display is off</string>
    <string name="torch_long_press_power_timeout_title">Automatically turn torch off</string>
    <string name="torch_long_press_power_timeout_never">Never</string>
    <string name="torch_long_press_power_timeout_1min">1 minute</string>
    <string name="torch_long_press_power_timeout_2min">2 minutes</string>
    <string name="torch_long_press_power_timeout_5min">5 minutes</string>
    <string name="torch_long_press_power_timeout_10min">10 minutes</string>
    <string name="others_settings_title">Others settings</string>
    <string name="additional_buttons_title">Additional buttons</string>
    <string name="click_partial_screenshot_title">Click to partial screenshot</string>
    <string name="click_partial_screenshot_summary">Short click Volume Down and Power to take partial screenshot</string>
    <string name="status_bar_title">Status bar</string>
    <string name="status_bar_quick_qs_pulldown_title">Quick pulldown</string>
    <string name="status_bar_quick_qs_pulldown_summary_left_edge">Left edge of the status bar pulls down Quick Settings</string>
    <string name="status_bar_quick_qs_pulldown_summary_right_edge">Right edge of the status bar pulls down Quick Settings</string>
    <string name="status_bar_quick_qs_pulldown_off">Off</string>
    <string name="status_bar_quick_qs_pulldown_left">Left</string>
    <string name="status_bar_quick_qs_pulldown_right">Right</string>
    <string name="status_bar_icons_title">Status bar icons</string>
    <string name="status_bar_system_icons_title">System icons</string>
    <string name="status_bar_system_icons_summary">Control which status bar icons are shown</string>
    <string name="status_bar_clock_title">Clock</string>
    <string name="status_bar_brightness_category">Brightness</string>
    <string name="qs_show_brightness_slider_expanded_title">Expanded QS brightness slider</string>
    <string name="qs_show_brightness_slider_expanded_summary">Show brightness slider when expanded</string>
    <string name="qs_show_auto_brightness_title">Auto brightness icon</string>
    <string name="qs_show_auto_brightness_summary">Show toggle for adaptive brightness near the slider</string>
    <string name="status_bar_toggle_brightness">Brightness control</string>
    <string name="status_bar_toggle_brightness_summary">Adjust brightness by sliding across the status bar</string>
    <string name="network_traffic_settings_title">Network traffic monitor</string>
    <string name="network_traffic_settings_summary">Show current network traffic levels in the status bar</string>
    <string name="qs_title">Quick settings</string>
    <string name="qs_rows_portrait_title">Rows (portrait)</string>
    <string name="qs_rows_landscape_title">Rows (landscape)</string>
    <string name="qs_columns_portrait_title">Columns (portrait)</string>
    <string name="qs_columns_landscape_title">Columns (landscape)</string>
    <string name="heads_up_notifications_enabled_title">Heads-up</string>
    <string name="heads_up_notifications_enabled_summary">Display priority notifications in a small floating window</string>
    <string name="wake_when_plugged_or_unplugged_title">Wake on plug</string>
    <string name="wake_when_plugged_or_unplugged_summary">Turn the screen on when connecting or disconnecting a power source</string>
    <string name="status_bar_double_tap_to_sleep_title">Tap to sleep</string>
    <string name="status_bar_double_tap_to_sleep_summary">Double-tap on the status bar or lockscreen to turn off the display</string>
    <string name="incall_feeedback_vibrate_title">Vibrate to indicate call status</string>
    <string name="quick_settings_vibrate_title">Vibrate on touch</string>
    <string name="quick_settings_vibrate_summary">Vibrate when touching QS tiles</string>
    <string name="status_bar_notif_count_title">Show notification count</string>
    <string name="status_bar_notif_count_summary">Display the number of pending notifications</string>
    <string name="notification_sound_vib_screen_on_title">Notification sound if active</string>
    <string name="notification_sound_vib_screen_on_summary">Play sound and vibration for notifications when screen is on</string>
    <string name="gvisual_title">G-Visual Mod</string>
    <string name="gvisual_summary">Various UI customizations</string>
    <string name="gaming_title">Gaming mode</string>
    <string name="gaming_title_summary">Extra features for immersive gaming experience</string>
    <string name="aspect_ratio_apps_enabled_title">Enable scaling</string>
    <string name="aspect_ratio_apps_enabled_summary">Allow legacy apps to use full screen</string>
    <string name="aspect_ratio_apps_list_summary"></string>
    <string name="aspect_ratio_apps_list_title">Apps allowed to use scaling</string>
    <string name="aspect_ratio_apps_info">Applications need to be restarted after changes</string>
</resources>