<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2017-2019 The Dirty Unicorns Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">

    <PreferenceCategory
        android:key="incall_vib_options"
        android:title="@string/incall_vibration_category" >

        <!-- In-call feedback -->
        <com.android.settings.custom.preference.SystemSettingSwitchPreference
          android:key="incall_feeedback_vibrate"
          android:title="@string/incall_feeedback_vibrate_title"
          android:defaultValue="true"
          settings:controller="com.raven.lair.preferences.IncallFeedbackPreferenceController" />
    </PreferenceCategory>

    <!-- Gvisual mod -->
    <PreferenceCategory 
        android:key="gvisual_category"
        android:title="@string/gvisual_title">

        <PreferenceScreen
            android:key="gvisual"
            android:title="@string/gvisual_title"
            android:summary="@string/gvisual_summary"
            android:fragment="com.raven.lair.fragments.GvisualSettings" />

    </PreferenceCategory>

    <PreferenceCategory 
        android:key="game_mode_category"
        android:title="@string/gaming_title">

         <PreferenceScreen
            android:key="gaming_category"
            android:title="@string/gaming_title"
            android:fragment="com.raven.lair.fragments.system_misc.GamingModeSettings"
            android:summary="@string/gaming_title_summary" />

       </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/misc" >

       <com.android.settings.custom.preference.SystemSettingSwitchPreference
        android:key="notification_sound_vib_screen_on" 
        android:title="@string/notification_sound_vib_screen_on_title" 
        android:summary="@string/notification_sound_vib_screen_on_summary"
        android:defaultValue="true" />

        <!-- Heads up -->
        <com.android.settings.custom.preference.GlobalSettingSwitchPreference
            android:key="heads_up_notifications_enabled"
            android:title="@string/heads_up_notifications_enabled_title"
            android:summary="@string/heads_up_notifications_enabled_summary" />

       <com.android.settings.custom.preference.GlobalSettingSwitchPreference
        android:key="wake_when_plugged_or_unplugged"
        android:title="@string/wake_when_plugged_or_unplugged_title"
        android:summary="@string/wake_when_plugged_or_unplugged_summary"
        android:defaultValue="@*android:bool/config_unplugTurnsOnScreen" />

        <com.android.settings.custom.preference.SystemSettingSwitchPreference
            android:key="aspect_ratio_apps_enabled"
            android:title="@string/aspect_ratio_apps_enabled_title"
            android:summary="@string/aspect_ratio_apps_enabled_summary"
            android:defaultValue="false" />

        <com.raven.lair.preferences.AppMultiSelectListPreference
            android:dependency="aspect_ratio_apps_enabled"
            android:summary="@string/aspect_ratio_apps_list_summary"
            android:title="@string/aspect_ratio_apps_list_title"
            android:key="aspect_ratio_apps_list"
            android:persistent="false" />

        <com.raven.lair.preferences.ScrollAppsViewPreference
            android:dependency="aspect_ratio_apps_enabled"
            android:key="aspect_ratio_apps_list_scroller"
            android:persistent="false"
            android:selectable="false" />

        <Preference
            android:dependency="aspect_ratio_apps_enabled"
            android:persistent="false"
            android:summary="@string/aspect_ratio_apps_info" />

    </PreferenceCategory>


</PreferenceScreen>
