<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:lineage="http://schemas.android.com/apk/res/lineageos.platform"
    android:key="status_bar_settings"
    android:title="@string/status_bar_title">

    <PreferenceScreen
        android:fragment="com.raven.lair.fragments.NetworkTrafficSettings"
        android:key="network_traffic_settings"
        android:title="@string/network_traffic_settings_title"
        android:summary="@string/network_traffic_settings_summary" />

    <PreferenceCategory
        android:title="@string/status_bar_icons_title">
        <PreferenceScreen
            android:key="status_bar_icons"
            android:title="@string/status_bar_system_icons_title"
            android:summary="@string/status_bar_system_icons_summary">
            <intent android:action="com.android.settings.action.STATUS_BAR_TUNER" />
        </PreferenceScreen>
         
     <com.android.settings.custom.preference.SystemSettingSwitchPreference
	        android:key="status_bar_notif_count"
	        android:title="@string/status_bar_notif_count_title"
	        android:summary="@string/status_bar_notif_count_summary"
	        android:defaultValue="false" />

    </PreferenceCategory>

    <com.android.settings.custom.preference.SystemSettingSwitchPreference
        android:key="double_tap_sleep_gesture"
        android:title="@string/status_bar_double_tap_to_sleep_title"
        android:summary="@string/status_bar_double_tap_to_sleep_summary"
        android:defaultValue="false" />

    <PreferenceCategory
        android:key="status_bar_clock_key"
        android:title="@string/status_bar_clock_title">

    </PreferenceCategory>

    <PreferenceCategory
        android:key="status_bar_battery_key"
        android:title="@string/status_bar_battery_title">

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/status_bar_brightness_category"
        android:key="status_bar_brightness_category">

        <com.android.settings.custom.preference.SecureSettingListPreference
            android:key="qs_show_brightness_slider"
            android:title="@string/status_bar_brightness_slider_title"
            android:summary="%s"
            android:dialogTitle="@string/status_bar_brightness_slider_title"
            android:entries="@array/status_bar_brightness_slider_entries"
            android:entryValues="@array/status_bar_brightness_slider_values"
            android:defaultValue="1" />

        <com.android.settings.custom.preference.SecureSettingSwitchPreference
            android:key="qs_show_auto_brightness"
            android:title="@string/status_bar_brightness_slider_auto_title"
            android:summary="@string/status_bar_brightness_slider_auto_summary"
            android:dependency="qs_show_brightness_slider"
            android:defaultValue="true" />

        <com.android.settings.custom.preference.SystemSettingSwitchPreference
            android:key="status_bar_brightness_control"
            android:title="@string/status_bar_toggle_brightness"
            android:summary="@string/status_bar_toggle_brightness_summary"
            android:defaultValue="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/qs_title">
    
        <com.android.settings.custom.preference.SecureSettingSwitchPreference
            android:key="quick_settings_vibrate"
            android:title="@string/quick_settings_vibrate_title"
            android:summary="@string/quick_settings_vibrate_summary"
            android:defaultValue="false" />

        <com.android.settings.custom.preference.SystemSettingListPreference
            android:key="qs_quick_pulldown"
            android:title="@string/status_bar_quick_qs_pulldown_title"
            android:entries="@array/status_bar_quick_qs_pulldown_entries"
            android:entryValues="@array/status_bar_quick_qs_pulldown_values"
            android:defaultValue="0" />

        <com.android.settings.custom.preference.SystemSettingListPreference
            android:key="qs_rows_portrait"
            android:dialogTitle="@string/qs_rows_portrait_title"
            android:title="@string/qs_rows_portrait_title"
            android:summary="%s"
            android:entries="@array/qs_rows_portrait_values"
            android:entryValues="@array/qs_rows_portrait_values"
            android:defaultValue="3" />

        <com.android.settings.custom.preference.SystemSettingListPreference
            android:key="qs_rows_landscape"
            android:dialogTitle="@string/qs_rows_landscape_title"
            android:title="@string/qs_rows_landscape_title"
            android:summary="%s"
            android:entries="@array/qs_rows_landscape_values"
            android:entryValues="@array/qs_rows_landscape_values"
            android:defaultValue="1" />

        <com.android.settings.custom.preference.SystemSettingListPreference
            android:key="qs_columns_portrait"
            android:dialogTitle="@string/qs_columns_portrait_title"
            android:title="@string/qs_columns_portrait_title"
            android:summary="%s"
            android:entries="@array/qs_columns_portrait_values"
            android:entryValues="@array/qs_columns_portrait_values"
            android:defaultValue="3" />

        <com.android.settings.custom.preference.SystemSettingListPreference
            android:key="qs_columns_landscape"
            android:dialogTitle="@string/qs_columns_landscape_title"
            android:title="@string/qs_columns_landscape_title"
            android:summary="%s"
            android:entries="@array/qs_columns_landscape_values"
            android:entryValues="@array/qs_columns_landscape_values"
            android:defaultValue="4" />

    </PreferenceCategory>

</PreferenceScreen>
